--- a/app/views/equipos/show.html.erb
+++ b/app/views/equipos/show.html.erb
@@ -9,69 +9,69 @@
   <b>Participante:</b>
   <%= @equipo.participante %>
 </p>
-<a href="<%=url_for equipos_cargar_equipo_path%>/<%= @equipo.id%>" class="btn btn-small btn-success"><i class="icon-plus"></i>  Cargar Jugadores</a>
 
-<p class="lead">ARQUEROS</p>
+
+<div class="alert alert-info"><strong>ARQUEROS</strong></div>
 <ul>
 <% JugadorEquipo.where("equipo_id=?",  @equipo.id).each do |j|%>
   
   	<% if (j.jugador.posicion_id == Posicion.where(:nombre => "ARQUERO").first.id) then%>
-   		<li><%= j.jugador %><br></li>
+   		<h5><li><%= j.jugador %><br></li></h5>
    	<% end %>
   
 <% end %>
 </ul>
 
-<p class="lead">DEFENSORES CENTRALES</p>
+<div class="alert alert-info"><strong>DEFENSORES CENTRALES</strong></div>
 <ul>
 <% JugadorEquipo.where("equipo_id=?",  @equipo.id).each do |j|%>
   
   	<% if (j.jugador.posicion_id == Posicion.where(:nombre => "DEFENSOR CENTRAL").first.id) then%>
-   		<li><%= j.jugador %>  <a href="" class="btn btn-mini btn-danger"><i class="icon-remove"></i></a><br></li>
+   		<h5><li><%= j.jugador %>  <br></li></h5>
    	<% end %>
   
 <% end %>
 </ul>
 
-<p class="lead">DEFENSORES LATERALES</p>
+<div class="alert alert-info"><strong>DEFENSORES LATERALES</strong></div>
 <ul>
 <% JugadorEquipo.where("equipo_id=?",  @equipo.id).each do |j|%>
   
   	<% if (j.jugador.posicion_id == Posicion.where(:nombre => "DEFENSOR LATERAL").first.id) then%>
-   		<li><%= j.jugador %><br></li>
+   		<h5><li><%= j.jugador %><br></li></h5>
    	<% end %>
   
 <% end %>
 </ul>
 
-<p class="lead">VOLANTES CENTRALES</p>
+<div class="alert alert-info"><strong>VOLANTES CENTRALES</strong></div>
 <ul>
 <% JugadorEquipo.where("equipo_id=?",  @equipo.id).each do |j|%>
   
   	<% if (j.jugador.posicion_id == Posicion.where(:nombre => "VOLANTE CENTRAL").first.id) then%>
-   		<li><%= j.jugador %><br> </li>
+   		<h5><li><%= j.jugador %><br></li></h5>
    	<% end %>
  
 <% end %>
 </ul>
 
-<p class="lead">VOLANTES LATERALES</p>
+<div class="alert alert-info"><strong>VOLANTES LATERALES</strong></div>
 <ul>
 <% JugadorEquipo.where("equipo_id=?",  @equipo.id).each do |j|%>
   
   	<% if (j.jugador.posicion_id == Posicion.where(:nombre => "VOLANTE LATERAL").first.id) then%>
-   		<li><%= j.jugador %><br></li>
+   		<h5><li><%= j.jugador %><br></li></h5>
    	<% end %>
   
 <% end %>
 </ul>
 
-<p class="lead">DELANTEROS</p>
+<div class="alert alert-info"><strong>DELANTEROS</strong></div>
 <ul>
 <% JugadorEquipo.where("equipo_id=?",  @equipo.id).each do |j|%>
   
   	<% if (j.jugador.posicion_id == Posicion.where(:nombre => "DELANTERO").first.id) then%>
-   		<li><%= j.jugador %><br></li>
+   		<h5><li><%= j.jugador %><br></li></h5>
    	<% end %>
   
 <% end %>
