--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,8 @@
 	        <li class="dropdown">
 	          <a id="drop1" href="#" role="button" class="dropdown-toggle" data-toggle="dropdown">Mi GranDT<b class="caret"></b></a>
 	          <ul class="dropdown-menu" role="menu" aria-labelledby="drop1">
-	            <li><%=link_to "Mi Equipo", equipos_path, :tabindex => "-1"%></li>
+	          	<li><%=link_to "Mi Equipo", :tabindex => "-1"%></li>
+	            <li><%=link_to "Equipos", equipos_path, :tabindex => "-1"%></li>
 	            <li><%=link_to "Elegir Libre", :tabindex => "-1"%></li>
 	          </ul>
 	        </li>
