--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,10 +23,12 @@
        	<!-- ACCESO USUARIO Y ADMIN-->
         <% if ((current_user.role? :admin) || (current_user.role? :participante))then %>
         
+        	<% @participante = Participante.find(current_user.id) %>
+        	<% @equipo = Equipo.where(:participante_id => @participante.id).first %>
 	        <li class="dropdown">
 	          <a id="drop1" href="#" role="button" class="dropdown-toggle" data-toggle="dropdown">Mi GranDT<b class="caret"></b></a>
 	          <ul class="dropdown-menu" role="menu" aria-labelledby="drop1">
-	          	<li><%=link_to "Mi Equipo", :tabindex => "-1"%></li>
+	          	<li><a href="<%=url_for equipos_path%>/<%= @equipo.id%>">Mi Equipo</a></li>
 	            <li><%=link_to "Equipos", equipos_path, :tabindex => "-1"%></li>
 	            <li><%=link_to "Elegir Libre", :tabindex => "-1"%></li>
 	          </ul>
