--- a/app/views/equipos/show.html.erb
+++ b/app/views/equipos/show.html.erb
@@ -5,9 +5,7 @@
 <h2><div class="alert alert-info" align="center"><strong><p><%= @equipo.nombre %></p></strong></div></h2>
   
 <div class="row-fluid">
-  <div class="span3 offset4">    
-    <div class="alert alert-success"><strong><p><b></b><%= @equipo.participante %></p></strong></div>
-  </div>
+  <span class="label label-success"><h2><%= @equipo.participante %></h2></span></br></br>
 </div>
 
 <div class="container-fluid">
