--- a/app/views/jugadors/show.html.erb
+++ b/app/views/jugadors/show.html.erb
@@ -2,12 +2,7 @@
 
 <p>
   <b>Nombre:</b>
-  <%= @jugador.nombre %>
-</p>
-
-<p>
-  <b>Apellido:</b>
-  <%= @jugador.apellido %>
+  <%= @jugador.nombres %>
 </p>
 
 <p>
