--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -1,2 +1,13 @@
-<h1>Page#index</h1>
-<p>Find me in app/views/page/index.html.erb</p>
+<div class="hero-unit">
+  <h1>Bienvenido</h1>
+  <p>Gran DT Trelew</p>
+  <p>
+    <a class="btn btn-primary btn-large">
+      ir a mi equipo
+    </a>
+  </p>
+  <p align="center"><%=link_to image_tag("tactica.jpg")%></p>
+</div>
+
+
+
