--- a/app/views/jugadors/_form.html.erb
+++ b/app/views/jugadors/_form.html.erb
@@ -12,12 +12,8 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :nombre %><br />
-    <%= f.text_field :nombre %>
-  </div>
-  <div class="field">
-    <%= f.label :apellido %><br />
-    <%= f.text_field :apellido %>
+    <%= f.label :nombres %><br />
+    <%= f.text_field :nombres %>
   </div>
   <div class="field">
     <%= f.label :club_id %><br />
