--- a/app/views/equipos/show.html.erb
+++ b/app/views/equipos/show.html.erb
@@ -4,87 +4,84 @@
 
 <h2><div class="alert alert-info" align="center"><strong><p><%= @equipo.nombre %></p></strong></div></h2>
   
-<div class="row-fluid">
-  <span class="label label-success"><h2><%= @equipo.participante %></h2></span></br></br>
-</div>
+<a class="btn btn-success btn-large" href="<%=url_for "equipos"%>/<%=@equipo.id%>">
+   Armar equipo fecha actual
+</a>
 
-<div class="container-fluid">
-  <div class="row-fluid">
-    <div class="span4">
-      <!--Sidebar content-->
-      <div class="alert alert-success"><strong>PLANTEL</strong></div>
-      <div class="alert alert-info"><strong>ARQUEROS</strong></div>
-      <ul>
-      <% JugadorEquipo.where("equipo_id=?",  @equipo.id).each do |j|%>
-        
-          <% if (j.jugador.posicion_id == Posicion.where(:nombre => "ARQUERO").first.id) then%>
-            <h5><li><%= j.jugador %><br></li></h5>
-          <% end %>
-        
-      <% end %>
-      </ul>
+<table class="table">
+  
+<tr class="success"><td colspan="3"> <h5>ARQUEROS</h5></td></tr>
+<ul>
+    <% JugadorEquipo.where("equipo_id=?",  @equipo.id).each do |j|%>  
+      <% if (j.jugador.posicion_id == Posicion.where(:nombre => "ARQUERO").first.id) then%>
+        <tr>
+          <td><h5><li><%= j.jugador %><br></li></h5></td>
+          <td><h5><%= j.jugador.club %><br></h5></td>
+        </tr>
+      <% end %>  
+    <% end %>
+</ul>
 
-      <div class="alert alert-info"><strong>DEFENSORES CENTRALES</strong></div>
-      <ul>
-      <% JugadorEquipo.where("equipo_id=?",  @equipo.id).each do |j|%>
-        
-          <% if (j.jugador.posicion_id == Posicion.where(:nombre => "DEFENSOR CENTRAL").first.id) then%>
-            <h5><li><%= j.jugador %>  <br></li></h5>
-          <% end %>
-        
-      <% end %>
-      </ul>
+<tr class="success"><td colspan="3"> <h5>DEFENSORES CENTRALES</h5></td></tr>
+<ul>
+    <% JugadorEquipo.where("equipo_id=?",  @equipo.id).each do |j|%>  
+      <% if (j.jugador.posicion_id == Posicion.where(:nombre => "DEFENSOR CENTRAL").first.id) then%>
+        <tr>
+          <td><h5><li><%= j.jugador %><br></li></h5></td>
+          <td><h5><%= j.jugador.club %><br></h5></td>
+        </tr>
+      <% end %>  
+    <% end %>
+</ul>
 
-      <div class="alert alert-info"><strong>DEFENSORES LATERALES</strong></div>
-      <ul>
-      <% JugadorEquipo.where("equipo_id=?",  @equipo.id).each do |j|%>
-        
-          <% if (j.jugador.posicion_id == Posicion.where(:nombre => "DEFENSOR LATERAL").first.id) then%>
-            <h5><li><%= j.jugador %><br></li></h5>
-          <% end %>
-        
-      <% end %>
-      </ul>
+<tr class="success"><td colspan="3"> <h5>DEFENSORES LATERALES</h5></td></tr>
+<ul>
+    <% JugadorEquipo.where("equipo_id=?",  @equipo.id).each do |j|%>  
+      <% if (j.jugador.posicion_id == Posicion.where(:nombre => "DEFENSOR LATERAL").first.id) then%>
+        <tr>
+          <td><h5><li><%= j.jugador %><br></li></h5></td>
+          <td><h5><%= j.jugador.club %><br></h5></td>
+        </tr>
+      <% end %>  
+    <% end %>
+</ul>
 
-      <div class="alert alert-info"><strong>VOLANTES CENTRALES</strong></div>
-      <ul>
-      <% JugadorEquipo.where("equipo_id=?",  @equipo.id).each do |j|%>
-        
-          <% if (j.jugador.posicion_id == Posicion.where(:nombre => "VOLANTE CENTRAL").first.id) then%>
-            <h5><li><%= j.jugador %><br></li></h5>
-          <% end %>
-       
-      <% end %>
-      </ul>
+<tr class="success"><td colspan="3"> <h5>VOLANTES CENTRALES</h5></td></tr>
+<ul>
+    <% JugadorEquipo.where("equipo_id=?",  @equipo.id).each do |j|%>  
+      <% if (j.jugador.posicion_id == Posicion.where(:nombre => "VOLANTE CENTRAL").first.id) then%>
+        <tr>
+          <td><h5><li><%= j.jugador %><br></li></h5></td>
+          <td><h5><%= j.jugador.club %><br></h5></td>
+        </tr>
+      <% end %>  
+    <% end %>
+</ul>
 
-      <div class="alert alert-info"><strong>VOLANTES LATERALES</strong></div>
-      <ul>
-      <% JugadorEquipo.where("equipo_id=?",  @equipo.id).each do |j|%>
-        
-          <% if (j.jugador.posicion_id == Posicion.where(:nombre => "VOLANTE LATERAL").first.id) then%>
-            <h5><li><%= j.jugador %><br></li></h5>
-          <% end %>
-        
-      <% end %>
-      </ul>
+<tr class="success"><td colspan="3"> <h5>VOLANTES LATERALES</h5></td></tr>
+<ul>
+    <% JugadorEquipo.where("equipo_id=?",  @equipo.id).each do |j|%>  
+      <% if (j.jugador.posicion_id == Posicion.where(:nombre => "VOLANTE LATERAL").first.id) then%>
+        <tr>
+          <td><h5><li><%= j.jugador %><br></li></h5></td>
+          <td><h5><%= j.jugador.club %><br></h5></td>
+        </tr>
+      <% end %>  
+    <% end %>
+</ul>
 
-      <div class="alert alert-info"><strong>DELANTEROS</strong></div>
-      <ul>
-      <% JugadorEquipo.where("equipo_id=?",  @equipo.id).each do |j|%>
-        
-          <% if (j.jugador.posicion_id == Posicion.where(:nombre => "DELANTERO").first.id) then%>
-            <h5><li><%= j.jugador %><br></li></h5>
-          <% end %>
-        
-      <% end %>
-      </ul>
-    </div>
-    <div class="span5 offset2">
-      <!--Body content-->
-      <div class="alert alert-success"><strong>ESTADÍSTICAS</strong></div>
-    </div>
-  </div>
-</div>
+<tr class="success"><td colspan="3"> <h5>DELANTEROS</h5></td></tr>
+<ul>
+    <% JugadorEquipo.where("equipo_id=?",  @equipo.id).each do |j|%>  
+      <% if (j.jugador.posicion_id == Posicion.where(:nombre => "DELANTERO").first.id) then%>
+        <tr>
+          <td><h5><li><%= j.jugador %><br></li></h5></td>
+          <td><h5><%= j.jugador.club %><br></h5></td>
+        </tr>
+      <% end %>  
+    <% end %>
+</ul>
+</table>
 
 
 
