--- a/app/views/jugadors/_form.html.erb
+++ b/app/views/jugadors/_form.html.erb
@@ -17,11 +17,11 @@
   </div>
   <div class="field">
     <%= f.label :club_id %><br />
-    <%= f.collection_select(:club_id, Club.all, :id, :nombre) %>
+    <%= f.collection_select(:club_id, Club.all, :id, :nombre, :prompt => true) %>
   </div>
    <div class="field">
     <%= f.label :posicion_id %><br />
-    <%= f.collection_select(:posicion_id, Posicion.all, :id, :nombre) %>
+    <%= f.collection_select(:posicion_id, Posicion.all, :id, :nombre, :prompt => true) %>
   </div>
    <div class="field">
     <%= f.check_box :disponible %><%= f.label :disponible %>
