--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -6,3 +6,11 @@
  *= require bootstrap_and_overrides
  *= require tables
 */
+
+
+div.droppable{
+	height: 500px;
+    width: 500px;
+    background-color: #aabb00;
+    margin-top: 20px;
+}
