--- a/app/views/equipos/cargar_equipo.html.erb
+++ b/app/views/equipos/cargar_equipo.html.erb
@@ -1,12 +1,13 @@
 <form action="<%= url_for :controller =>  "equipos", :action => "agregar_jugadores" %>">
 
+    <span class="label label-important">Jugadores elegidos hasta el momento: </span>
     <p class="lead">ARQUEROS</p>
     <ul>
     <% @arqueros = Jugador.where("posicion_id=? and disponible=?",  Posicion.where(:nombre => "ARQUERO").first.id, true) %>
     <% @arqueros.sort { |a,b| a[:club] <=> b[:club] } %>
     <% @arqueros.each do |j| %>
       <li>
-        <input type="checkbox" name="<%= j.id %>"> (<%= j.club %>) - <%= j %><br>
+        <input type="checkbox" name="<%= j.id %>" onClick="contar(<%=j.id%>)" id="<%= j.id %>"> (<%= j.club %>) - <%= j %><br>
       </li>
     <%end%>
     
@@ -17,7 +18,7 @@
     <% @defensores_centrales.sort { |a,b| a[:club] <=> b[:club] } %>
     <% @defensores_centrales.each do |j| %>
       <li>
-        <input type="checkbox" name="<%= j.id %>"> (<%= j.club %>) - <%= j %><br>
+        <input type="checkbox" name="<%= j.id %>" onClick="contar(<%=j.id%>)" id="<%= j.id %>"> (<%= j.club %>) - <%= j %><br>
       </li>
     <% end %>
     </ul>
@@ -27,7 +28,7 @@
     <% @defensores_laterales.sort { |a,b| a[:club] <=> b[:club] } %>
     <% @defensores_laterales.each do |j| %>
       <li>
-        <input type="checkbox" name="<%= j.id %>"> (<%= j.club %>) - <%= j %><br>
+        <input type="checkbox" name="<%= j.id %>" onClick="contar(<%=j.id%>)" id="<%= j.id %>"> (<%= j.club %>) - <%= j %><br>
       </li>
     <% end %>
     </ul>
@@ -37,7 +38,7 @@
     <% @volantes_centrales.sort { |a,b| a[:club] <=> b[:club] } %>
     <% @volantes_centrales.each do |j| %>
       <li>
-        <input type="checkbox" name="<%= j.id %>"> (<%= j.club %>) - <%= j %><br>
+        <input type="checkbox" name="<%= j.id %>" onClick="contar(<%=j.id%>)" id="<%= j.id %>"> (<%= j.club %>) - <%= j %><br>
       </li>
     <% end %>
     </ul>
@@ -47,7 +48,7 @@
     <% @volantes_laterales.sort { |a,b| a[:club] <=> b[:club] } %>
     <% @volantes_laterales.each do |j| %>
       <li>
-        <input type="checkbox" name="<%= j.id %>"> (<%= j.club %>) - <%= j %><br>
+        <input type="checkbox" name="<%= j.id %>" onClick="contar(<%=j.id%>)" id="<%= j.id %>"> (<%= j.club %>) - <%= j %><br>
       </li>
     <% end %>
     </ul>
@@ -57,9 +58,34 @@
     <% @delanteros.sort { |a,b| a[:club] <=> b[:club] } %>
     <% @delanteros.each do |j| %>
       <li>
-        <input type="checkbox" name="<%= j.id %>"> (<%= j.club %>) - <%= j %><br>
+        <input type="checkbox" name="<%= j.id %>" onClick="contar(<%=j.id%>)" id="<%= j.id %>"> (<%= j.club %>) - <%= j %><br>
       </li>
     <% end %>
     </ul>
     <input type="submit" name="cargar equipo" value="cargar equipo">
   </form>
+
+
+  <!-- AGREGAR CONTADOR DE CHECKBOX SELECCIONADOS  -->
+
+  <script type="text/javascript">
+      var contador = 0;
+      function contar(nameCheckbox) {
+        
+        var check = document.getElementById(nameCheckbox);
+
+        if (check.checked){
+          if (contador >= 25){
+            check.checked = false; 
+            alert("no puede elegir mas de 25 jugadores");                  
+           }else{
+            contador = contador + 1;   
+           } 
+          
+        }else {
+          contador = contador - 1;
+        }
+                
+     }
+  </script>
+  
