--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 
 <body>
 
-<div id="navbar-example" class="navbar navbar-inverse">
+<div id="navbar-example" class="navbar navbar-inverse navbar-fixed-top">
   <div class="navbar-inner">
     <div class="container" style="width: auto;">
       <a class="brand" href="<%= url_for root_path %>">GranDT TW</a>
@@ -85,7 +85,7 @@
     </div>
   </div>
 </div> 									
-
+</br></br></br>
 <div class="row"> 
 	<div class="span1">
 		
